--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@types/uuid": "^9.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "uuid": "^9.0.1",
+    "zustand": "^4.4.7"
   },
   "browserslist": {
     "production": [
@@ -34,6 +37,7 @@
     "@babel/preset-typescript": "^7.23.3",
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
+    "@faker-js/faker": "^8.3.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.42",
