--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "typeRoots" : ["node_modules/@types", "src/types"]
+    "typeRoots" : ["node_modules/@types", "src/types*"]
   },
   "include": ["src"]
 }
