--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.23.5",
+    "@babel/plugin-transform-runtime": "^7.23.6",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
