--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@types/uuid": "^9.0.7",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-separator": "^1.0.3",
     "ahooks": "^3.7.8",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
@@ -45,6 +47,7 @@
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.13.2",
     "autoprefixer": "^10.4.16",
@@ -62,6 +65,7 @@
     "husky": "^8.0.0",
     "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8.4.32",
+    "postcss-import": "^15.1.0",
     "postcss-loader": "^7.3.3",
     "prettier": "^3.1.0",
     "react-refresh": "^0.14.0",
