--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@radix-ui/react-separator": "^1.0.3",
     "ahooks": "^3.7.8",
     "classnames": "^2.3.2",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.20.1",
     "uuid": "^9.0.1",
     "zustand": "^4.4.7"
