--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@radix-ui/react-separator": "^1.0.3",
     "ahooks": "^3.7.8",
     "classnames": "^2.3.2",
+    "dexie": "^3.2.4",
+    "dexie-react-hooks": "^1.1.7",
     "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
