--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dexie": "^3.2.4",
     "dexie-react-hooks": "^1.1.7",
     "html2canvas": "^1.4.1",
+    "immer": "^10.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
