--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-toolbar": "^1.0.4",
     "ahooks": "^3.7.8",
     "classnames": "^2.3.2",
     "dexie": "^3.2.4",
@@ -23,6 +24,7 @@
     "html2canvas": "^1.4.1",
     "immer": "^10.0.3",
     "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
